opam-version: "2.0"
name: "mcu"
version: "0.1"
synopsis: "A Marvel Cinematic Universe GraphQL Server"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/reason-mcu-graphql-server"
bug-reports: "https//github.com/ostera/reason-mcu-graphql-server/issues"
depends: [
  "fmt"
  
  "httpaf"
  "httpaf-lwt"
  "logs"
  "lwt"

  "graphql"
  "graphql-lwt"

  "dune" {build}
  "reason" {build}
]
build: [make "build"]
install: [make "install"]
